--- a/assets_sistema/css/styles.css
+++ b/assets_sistema/css/styles.css
@@ -7,3 +7,10 @@
 	background-color: #438EB9;
 	color: white;
 }
+
+.loading_gift{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin: -50px 0px 0px -50px;
+}
