--- a/assets_sistema/css/styles.css
+++ b/assets_sistema/css/styles.css
@@ -14,3 +14,10 @@
 	left: 50%;
 	margin: -50px 0px 0px -50px;
 }
+
+.label-xlg-personal {
+    padding: .3em .7em .4em;
+    font-size: 18px;
+    line-height: 1.3;
+    height: 33px;
+}
